--- a/.config
+++ b/.config
@@ -94,7 +94,7 @@ CONFIG_TARGET_ramips_mt7621=y
 # CONFIG_TARGET_ramips_mt7621_DEVICE_elecom_wrc-2533gst is not set
 # CONFIG_TARGET_ramips_mt7621_DEVICE_elecom_wrc-2533gst2 is not set
 # CONFIG_TARGET_ramips_mt7621_DEVICE_firefly_firewrt is not set
-CONFIG_TARGET_ramips_mt7621_DEVICE_gehua_ghl-r-001=y
+# CONFIG_TARGET_ramips_mt7621_DEVICE_gehua_ghl-r-001 is not set
 # CONFIG_TARGET_ramips_mt7621_DEVICE_glinet_gl-mt1300 is not set
 # CONFIG_TARGET_ramips_mt7621_DEVICE_gnubee_gb-pc1 is not set
 # CONFIG_TARGET_ramips_mt7621_DEVICE_gnubee_gb-pc2 is not set
@@ -140,7 +140,7 @@ CONFIG_TARGET_ramips_mt7621_DEVICE_gehua_ghl-r-001=y
 # CONFIG_TARGET_ramips_mt7621_DEVICE_netgear_wac124 is not set
 # CONFIG_TARGET_ramips_mt7621_DEVICE_netgear_wndr3700-v5 is not set
 # CONFIG_TARGET_ramips_mt7621_DEVICE_netis_wf2881 is not set
-# CONFIG_TARGET_ramips_mt7621_DEVICE_phicomm_k2p is not set
+CONFIG_TARGET_ramips_mt7621_DEVICE_phicomm_k2p=y
 # CONFIG_TARGET_ramips_mt7621_DEVICE_planex_vr500 is not set
 # CONFIG_TARGET_ramips_mt7621_DEVICE_raisecom_msg1500-x-00 is not set
 # CONFIG_TARGET_ramips_mt7621_DEVICE_raisecom_msg1500-z-00 is not set
@@ -195,7 +195,7 @@ CONFIG_HAS_SUBTARGETS=y
 CONFIG_HAS_DEVICES=y
 CONFIG_TARGET_BOARD="ramips"
 CONFIG_TARGET_SUBTARGET="mt7621"
-CONFIG_TARGET_PROFILE="DEVICE_gehua_ghl-r-001"
+CONFIG_TARGET_PROFILE="DEVICE_phicomm_k2p"
 CONFIG_TARGET_ARCH_PACKAGES="mipsel_24kc"
 CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mno-branch-likely -mips32r2 -mtune=24kc"
 CONFIG_CPU_TYPE="24kc"
@@ -217,12 +217,9 @@ CONFIG_DEFAULT_kmod-crypto-hw-eip93=y
 CONFIG_DEFAULT_kmod-gpio-button-hotplug=y
 CONFIG_DEFAULT_kmod-ipt-raw=y
 CONFIG_DEFAULT_kmod-leds-gpio=y
-CONFIG_DEFAULT_kmod-mt7603e=y
-CONFIG_DEFAULT_kmod-mt76x2e=y
+CONFIG_DEFAULT_kmod-mt7615d_dbdc=y
 CONFIG_DEFAULT_kmod-nf-nathelper=y
 CONFIG_DEFAULT_kmod-nf-nathelper-extra=y
-CONFIG_DEFAULT_kmod-usb-ledtrig-usbport=y
-CONFIG_DEFAULT_kmod-usb3=y
 CONFIG_DEFAULT_libc=y
 CONFIG_DEFAULT_libgcc=y
 CONFIG_DEFAULT_libustream-openssl=y
@@ -233,7 +230,6 @@ CONFIG_DEFAULT_luci-app-arpbind=y
 CONFIG_DEFAULT_luci-app-autoreboot=y
 CONFIG_DEFAULT_luci-app-ddns=y
 CONFIG_DEFAULT_luci-app-filetransfer=y
-CONFIG_DEFAULT_luci-app-mtwifi=y
 CONFIG_DEFAULT_luci-app-nlbwmon=y
 CONFIG_DEFAULT_luci-app-ramfree=y
 CONFIG_DEFAULT_luci-app-ssr-plus=y
@@ -243,7 +239,6 @@ CONFIG_DEFAULT_luci-app-upnp=y
 CONFIG_DEFAULT_luci-app-vlmcsd=y
 CONFIG_DEFAULT_luci-app-vsftpd=y
 CONFIG_DEFAULT_luci-app-wol=y
-CONFIG_DEFAULT_luci-newapi=y
 CONFIG_DEFAULT_mtd=y
 CONFIG_DEFAULT_netifd=y
 CONFIG_DEFAULT_opkg=y
@@ -254,6 +249,7 @@ CONFIG_DEFAULT_swconfig=y
 CONFIG_DEFAULT_uci=y
 CONFIG_DEFAULT_uclient-fetch=y
 CONFIG_DEFAULT_urandom-seed=y
+CONFIG_DEFAULT_wireless-tools=y
 CONFIG_HAS_TESTING_KERNEL=y
 CONFIG_AUDIO_SUPPORT=y
 CONFIG_GPIO_SUPPORT=y
@@ -2317,7 +2313,7 @@ CONFIG_PACKAGE_kmod-lib-textsearch=y
 #
 # Native Language Support
 #
-CONFIG_PACKAGE_kmod-nls-base=y
+# CONFIG_PACKAGE_kmod-nls-base is not set
 # CONFIG_PACKAGE_kmod-nls-cp1250 is not set
 # CONFIG_PACKAGE_kmod-nls-cp1251 is not set
 # CONFIG_PACKAGE_kmod-nls-cp437 is not set
@@ -2687,12 +2683,12 @@ CONFIG_ZRAM_DEF_COMP_LZORLE=y
 # CONFIG_PACKAGE_kmod-usb-acm is not set
 # CONFIG_PACKAGE_kmod-usb-atm is not set
 # CONFIG_PACKAGE_kmod-usb-cm109 is not set
-CONFIG_PACKAGE_kmod-usb-core=y
+# CONFIG_PACKAGE_kmod-usb-core is not set
 # CONFIG_PACKAGE_kmod-usb-dwc2 is not set
 # CONFIG_PACKAGE_kmod-usb-dwc3 is not set
 # CONFIG_PACKAGE_kmod-usb-hid is not set
 # CONFIG_PACKAGE_kmod-usb-hid-cp2112 is not set
-CONFIG_PACKAGE_kmod-usb-ledtrig-usbport=y
+# CONFIG_PACKAGE_kmod-usb-ledtrig-usbport is not set
 # CONFIG_PACKAGE_kmod-usb-net is not set
 # CONFIG_PACKAGE_kmod-usb-net-aqc111 is not set
 # CONFIG_PACKAGE_kmod-usb-net-asix is not set
@@ -2749,12 +2745,10 @@ CONFIG_PACKAGE_kmod-usb-ledtrig-usbport=y
 # CONFIG_PACKAGE_kmod-usb-storage-uas is not set
 # CONFIG_PACKAGE_kmod-usb-uhci is not set
 # CONFIG_PACKAGE_kmod-usb-wdm is not set
-CONFIG_PACKAGE_kmod-usb-xhci-hcd=y
-CONFIG_PACKAGE_kmod-usb-xhci-mtk=y
 # CONFIG_PACKAGE_kmod-usb-yealink is not set
 # CONFIG_PACKAGE_kmod-usb2 is not set
 # CONFIG_PACKAGE_kmod-usb2-pci is not set
-CONFIG_PACKAGE_kmod-usb3=y
+# CONFIG_PACKAGE_kmod-usb3 is not set
 # CONFIG_PACKAGE_kmod-usbip is not set
 # CONFIG_PACKAGE_kmod-usbip-client is not set
 # CONFIG_PACKAGE_kmod-usbip-server is not set
@@ -2841,88 +2835,119 @@ CONFIG_PACKAGE_kmod-usb3=y
 # CONFIG_PACKAGE_kmod-mt76 is not set
 # CONFIG_PACKAGE_kmod-mt7601u is not set
 # CONFIG_PACKAGE_kmod-mt7603 is not set
-CONFIG_PACKAGE_kmod-mt7603e=y
-CONFIG_MT7603E_FIRST_IF_MT7603E=y
-CONFIG_MT7603E_RLT_WIFI=y
-CONFIG_MT7603E_MT_WIFI_PATH="rlt_wifi"
+# CONFIG_PACKAGE_kmod-mt7603e is not set
+# CONFIG_PACKAGE_kmod-mt7615-firmware is not set
+CONFIG_PACKAGE_kmod-mt7615d=y
+CONFIG_MTK_SUPPORT_OPENWRT=y
+CONFIG_MTK_WIFI_DRIVER=y
+CONFIG_MTK_FIRST_IF_MT7615E=y
+# CONFIG_MTK_FIRST_IF_MT7622 is not set
+# CONFIG_MTK_FIRST_IF_MT7626 is not set
+# CONFIG_MTK_FIRST_IF_NONE is not set
+CONFIG_MTK_SECOND_IF_NONE=y
+# CONFIG_MTK_SECOND_IF_MT7615E is not set
+CONFIG_MTK_THIRD_IF_NONE=y
+# CONFIG_MTK_THIRD_IF_MT7615E is not set
+CONFIG_MTK_RT_FIRST_CARD=7615
+CONFIG_MTK_RT_FIRST_IF_RF_OFFSET=0xc0000
+CONFIG_MTK_MT_WIFI=y
+CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
 
 #
 # WiFi Generic Feature Options
 #
-CONFIG_MT7603E_FIRST_IF_EEPROM_FLASH=y
-# CONFIG_MT7603E_FIRST_IF_EEPROM_PROM is not set
-# CONFIG_MT7603E_FIRST_IF_EEPROM_EFUSE is not set
-CONFIG_MT7603E_RT_FIRST_CARD_EEPROM="flash"
-CONFIG_MT7603E_MULTI_INF_SUPPORT=y
-CONFIG_MT7603E_WSC_INCLUDED=y
-# CONFIG_MT7603E_WSC_NFC_SUPPORT is not set
-CONFIG_MT7603E_DOT11N_DRAFT3=y
-CONFIG_MT7603E_DOT11W_PMF_SUPPORT=y
-# CONFIG_MT7603E_TXBF_SUPPORT is not set
-CONFIG_MT7603E_LLTD_SUPPORT=y
-# CONFIG_MT7603E_QOS_DLS_SUPPORT is not set
-# CONFIG_MT7603E_WAPI_SUPPORT is not set
-# CONFIG_MT7603E_CARRIER_DETECTION_SUPPORT is not set
-# CONFIG_MT7603E_IGMP_SNOOP_SUPPORT is not set
-# CONFIG_MT7603E_BLOCK_NET_IF is not set
-CONFIG_MT7603E_NEW_RATE_ADAPT_SUPPORT=y
-CONFIG_MT7603E_MT_NEW_RATE_ADAPT_SUPPORT=y
-# CONFIG_MT7603E_IDS_SUPPORT is not set
-# CONFIG_MT7603E_WIFI_WORK_QUEUE is not set
-# CONFIG_MT7603E_WIFI_SKB_RECYCLE is not set
-CONFIG_MT7603E_RTMP_FLASH_SUPPORT=y
-# CONFIG_MT7603E_LED_CONTROL_SUPPORT is not set
-# CONFIG_MT7603E_SINGLE_SKU is not set
-CONFIG_MT7603E_ATE_SUPPORT=y
-CONFIG_MT7603E_RT2860V2_AP_V24_DATA_STRUCTURE=y
-# CONFIG_MT7603E_MEMORY_OPTIMIZATION is not set
-# CONFIG_MT7603E_HOTSPOT is not set
-# CONFIG_MT7603E_MT_RTMP_TEMPERATURE_TX_ALC is not set
-CONFIG_MT7603E_UAPSD=y
-# CONFIG_MT7603E_RLT_MAC is not set
-CONFIG_MT7603E_RTMP_PCI_SUPPORT=y
+CONFIG_MTK_FIRST_IF_EEPROM_FLASH=y
+# CONFIG_MTK_FIRST_IF_EEPROM_PROM is not set
+# CONFIG_MTK_FIRST_IF_EEPROM_EFUSE is not set
+CONFIG_MTK_RT_FIRST_CARD_EEPROM="flash"
+CONFIG_MTK_WIFI_BASIC_FUNC=y
+CONFIG_MTK_DOT11_N_SUPPORT=y
+CONFIG_MTK_DOT11_VHT_AC=y
+CONFIG_MTK_G_BAND_256QAM_SUPPORT=y
+CONFIG_MTK_BRCM_256QAM_SUPPORT=y
+CONFIG_MTK_VHT_TXBF_2G_EPIGRAM_IE_SUPPORT=y
+CONFIG_MTK_TPC_SUPPORT=y
+CONFIG_MTK_ICAP_SUPPORT=y
+CONFIG_MTK_SPECTRUM_SUPPORT=y
+CONFIG_MTK_BACKGROUND_SCAN_SUPPORT=y
+CONFIG_MTK_SMART_CARRIER_SENSE_SUPPORT=y
+CONFIG_MTK_MT_DFS_SUPPORT=y
+CONFIG_MTK_HDR_TRANS_TX_SUPPORT=y
+CONFIG_MTK_HDR_TRANS_RX_SUPPORT=y
+CONFIG_MTK_DBDC_MODE=y
+CONFIG_MTK_MULTI_PROFILE_SUPPORT=y
+CONFIG_MTK_WSC_INCLUDED=y
+CONFIG_MTK_WSC_V2_SUPPORT=y
+CONFIG_MTK_DOT11W_PMF_SUPPORT=y
+CONFIG_MTK_TXBF_SUPPORT=y
+# CONFIG_MTK_FAST_NAT_SUPPORT is not set
+# CONFIG_MTK_FTM_SUPPORT is not set
+CONFIG_MTK_IGMP_SNOOP_SUPPORT=y
+CONFIG_MTK_RTMP_FLASH_SUPPORT=y
+CONFIG_MTK_PRE_CAL_TRX_SET1_SUPPORT=y
+CONFIG_MTK_RLM_CAL_CACHE_SUPPORT=y
+CONFIG_MTK_PRE_CAL_TRX_SET2_SUPPORT=y
+# CONFIG_MTK_RF_LOCKDOWN_SUPPORT is not set
+# CONFIG_MTK_LINK_TEST_SUPPORT is not set
+CONFIG_MTK_ATE_SUPPORT=y
+# CONFIG_MTK_PASSPOINT_R2 is not set
+# CONFIG_MTK_MBO_SUPPORT is not set
+CONFIG_MTK_UAPSD=y
+CONFIG_MTK_TCP_RACK_SUPPORT=y
+CONFIG_MTK_RED_SUPPORT=y
+# CONFIG_MTK_FDB_SUPPORT is not set
+CONFIG_MTK_FIRST_IF_IPAILNA=y
+# CONFIG_MTK_FIRST_IF_IPAELNA is not set
+# CONFIG_MTK_FIRST_IF_EPAELNA is not set
+# CONFIG_MTK_RLT_MAC is not set
+# CONFIG_MTK_RTMP_MAC is not set
 # end of WiFi Generic Feature Options
 
 #
 # WiFi Operation Modes
 #
-CONFIG_MT7603E_MT_WIFI_MODE_AP=y
-# CONFIG_MT7603E_MT_WIFI_MODE_STA is not set
-# CONFIG_MT7603E_MT_WIFI_MODE_BOTH is not set
-CONFIG_MT7603E_RLT_AP_SUPPORT=y
-# CONFIG_MT7603E_WDS_SUPPORT is not set
-CONFIG_MT7603E_MBSS_SUPPORT=y
-# CONFIG_MT7603E_NEW_MBSSID_MODE is not set
-# CONFIG_MT7603E_CFG80211_SUPPORT is not set
-# CONFIG_MT7603E_ALL_NET_EVENT is not set
-# CONFIG_MT7603E_ACL_V2_SUPPORT is not set
-CONFIG_MT7603E_APCLI_SUPPORT=y
-CONFIG_MT7603E_MULTI_APCLI_SUPPORT=y
-CONFIG_MT7603E_MAC_REPEATER_SUPPORT=y
-# CONFIG_MT7603E_AIRPLAY_SUPPORT is not set
-# CONFIG_MT7603E_DFS_SUPPORT is not set
-# CONFIG_MT7603E_NINTENDO_AP is not set
-# CONFIG_MT7603E_COC_SUPPORT is not set
-# CONFIG_MT7603E_MCAST_RATE_SPECIFIC is not set
-# CONFIG_MT7603E_PREVENT_ARP_SPOOFING_SUPPORT is not set
-# CONFIG_MT7603E_MULTI_CORE_SUPPORT is not set
-# CONFIG_MT7603E_SNIFFER_SUPPORT is not set
-# CONFIG_MT7603E_DOT11R_FT_SUPPORT is not set
-# CONFIG_MT7603E_DOT11K_RRM_SUPPORT is not set
-# CONFIG_MT7603E_WNM_SUPPORT is not set
-# CONFIG_MT7603E_BAND_STEERING_7603 is not set
-# CONFIG_MT7603E_SECURITY_IMPROVEMENT_SUPPORT is not set
-# CONFIG_MT7603E_WPA3_SUPPORT is not set
-# CONFIG_MT7603E_OWE_SUPPORT is not set
-CONFIG_MT7603E_NEW_BW2040_COEXIST_SUPPORT=y
+CONFIG_MTK_WIFI_MODE_AP=y
+# CONFIG_MTK_WIFI_MODE_STA is not set
+# CONFIG_MTK_WIFI_MODE_BOTH is not set
+CONFIG_MTK_MT_AP_SUPPORT=y
+CONFIG_MTK_WDS_SUPPORT=y
+CONFIG_MTK_MBSS_SUPPORT=y
+CONFIG_MTK_APCLI_SUPPORT=y
+# CONFIG_MTK_APCLI_CERT_SUPPORT is not set
+CONFIG_MTK_MAC_REPEATER_SUPPORT=y
+# CONFIG_MTK_MWDS is not set
+CONFIG_MTK_MUMIMO_SUPPORT=y
+CONFIG_MTK_MU_RA_SUPPORT=y
+# CONFIG_MTK_DOT11R_FT_SUPPORT is not set
+# CONFIG_MTK_DOT11K_RRM_SUPPORT is not set
+# CONFIG_MTK_CFG80211_SUPPORT is not set
+# CONFIG_MTK_DSCP_PRI_SUPPORT is not set
+# CONFIG_MTK_CON_WPS_SUPPORT is not set
+CONFIG_MTK_MCAST_RATE_SPECIFIC=y
+CONFIG_MTK_VOW_SUPPORT=y
+CONFIG_MTK_BAND_STEERING=y
+CONFIG_MTK_LED_CONTROL_SUPPORT=y
+# CONFIG_MTK_WLAN_HOOK is not set
+# CONFIG_MTK_RADIUS_ACCOUNTING_SUPPORT is not set
+# CONFIG_MTK_GREENAP_SUPPORT is not set
+CONFIG_MTK_PCIE_ASPM_DYM_CTRL_SUPPORT=y
+# CONFIG_MTK_COEX_SUPPORT is not set
+# CONFIG_MTK_EASY_SETUP_SUPPORT is not set
+# CONFIG_MTK_EVENT_NOTIFIER_SUPPORT is not set
+# CONFIG_MTK_AIR_MONITOR is not set
+# CONFIG_MTK_WNM_SUPPORT is not set
+# CONFIG_MTK_INTERWORKING is not set
+CONFIG_MTK_LINUX_NET_TXQ_SUPPORT=y
 # end of WiFi Operation Modes
 
-CONFIG_MT7603E_RALINK_MT7603E=y
-CONFIG_MT7603E_MT_MAC=y
-# CONFIG_PACKAGE_kmod-mt7615-firmware is not set
-# CONFIG_PACKAGE_kmod-mt7615d is not set
-# CONFIG_MTK_CHIP_MT7615E is not set
-# CONFIG_PACKAGE_kmod-mt7615d_dbdc is not set
+CONFIG_MTK_WIFI_MT_MAC=y
+CONFIG_MTK_MT_MAC=y
+# CONFIG_MTK_CHIP_MT7603E is not set
+CONFIG_MTK_CHIP_MT7615E=y
+# CONFIG_MTK_CHIP_MT7622 is not set
+# CONFIG_MTK_CHIP_MT7663E is not set
+# CONFIG_MTK_CHIP_MT7626 is not set
+CONFIG_PACKAGE_kmod-mt7615d_dbdc=y
 # CONFIG_PACKAGE_kmod-mt7615e is not set
 # CONFIG_PACKAGE_kmod-mt7663-firmware-ap is not set
 # CONFIG_PACKAGE_kmod-mt7663-firmware-sta is not set
@@ -2931,18 +2956,7 @@ CONFIG_MT7603E_MT_MAC=y
 # CONFIG_PACKAGE_kmod-mt76x0e is not set
 # CONFIG_PACKAGE_kmod-mt76x0u is not set
 # CONFIG_PACKAGE_kmod-mt76x2 is not set
-CONFIG_PACKAGE_kmod-mt76x2e=y
-CONFIG_MT76X2E_RT_SECOND_IF_MT7612E=y
-CONFIG_MT76X2E_RT_FIRST_CARD=7603
-CONFIG_MT76X2E_RT_SECOND_CARD=7612
-CONFIG_MT76X2E_AP_LED=y
-CONFIG_MT76X2E_AP_LLTD=y
-CONFIG_MT76X2E_AP_WDS=y
-CONFIG_MT76X2E_AP_MBSS=y
-CONFIG_MT76X2E_AP_MBSS_NEW_MBSSID_MODE=y
-CONFIG_MT76X2E_AP_APCLI=y
-CONFIG_MT76X2E_AP_80211AC_VHT=y
-# CONFIG_MT76X2E_AP_TXBF_SUPPORT is not set
+# CONFIG_PACKAGE_kmod-mt76x2e is not set
 # CONFIG_PACKAGE_kmod-mt76x2u is not set
 # CONFIG_PACKAGE_kmod-mt7915e is not set
 # CONFIG_PACKAGE_kmod-mt7921e is not set
@@ -4623,7 +4637,7 @@ CONFIG_LUCI_LANG_zh-cn=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
 # CONFIG_PACKAGE_luci-mod-failsafe is not set
 # CONFIG_PACKAGE_luci-mod-rpc is not set
-CONFIG_PACKAGE_luci-newapi=y
+# CONFIG_PACKAGE_luci-newapi is not set
 # end of 2. Modules
 
 #
@@ -4633,8 +4647,8 @@ CONFIG_PACKAGE_luci-newapi=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-adblock is not set
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-CONFIG_PACKAGE_luci-app-adguardhome=y
-# CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary is not set
+# CONFIG_PACKAGE_luci-app-adguardhome is not set
+CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=y
 # CONFIG_PACKAGE_luci-app-advanced is not set
 # CONFIG_PACKAGE_luci-app-advanced-reboot is not set
 # CONFIG_PACKAGE_luci-app-ahcp is not set
@@ -4726,12 +4740,12 @@ CONFIG_PACKAGE_luci-app-firewall=y
 # CONFIG_PACKAGE_luci-app-koolproxyR is not set
 # CONFIG_PACKAGE_luci-app-linkease is not set
 # CONFIG_PACKAGE_luci-app-lxc is not set
-# CONFIG_PACKAGE_luci-app-mentohust is not set
+CONFIG_PACKAGE_luci-app-mentohust=y
 # CONFIG_PACKAGE_luci-app-minidlna is not set
 # CONFIG_PACKAGE_luci-app-minieap is not set
 # CONFIG_PACKAGE_luci-app-mjpg-streamer is not set
 # CONFIG_PACKAGE_luci-app-mosdns is not set
-CONFIG_PACKAGE_luci-app-mtwifi=y
+# CONFIG_PACKAGE_luci-app-mtwifi is not set
 # CONFIG_PACKAGE_luci-app-music-remote-center is not set
 # CONFIG_PACKAGE_luci-app-mwan3 is not set
 # CONFIG_PACKAGE_luci-app-mwan3helper is not set
@@ -4944,8 +4958,6 @@ CONFIG_PACKAGE_luci-lib-nixio_openssl=y
 # end of 6. Libraries
 
 CONFIG_PACKAGE_default-settings=y
-CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-adguardhome-zh_Hans is not set
 CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-base-ca is not set
@@ -5888,16 +5900,7 @@ CONFIG_XRAY_PLUGIN_COMPRESS_UPX=y
 # CONFIG_PACKAGE_hcxdumptool is not set
 # CONFIG_PACKAGE_hcxtools is not set
 # CONFIG_PACKAGE_horst is not set
-CONFIG_PACKAGE_mt_wifi=y
-
-#
-# MT_WIFI Configuration
-#
-CONFIG_MTK_CHIP_MT7603E_MT7612E=y
-# CONFIG_MTK_CHIP_MT7603E_MT7615E is not set
-# CONFIG_MTK_CHIP_MT7915E_DBDC is not set
-# end of MT_WIFI Configuration
-
+# CONFIG_PACKAGE_mt_wifi is not set
 # CONFIG_PACKAGE_mtk_apcli is not set
 # CONFIG_PACKAGE_pixiewps is not set
 # CONFIG_PACKAGE_reaver is not set
@@ -5925,8 +5928,8 @@ CONFIG_MTK_CHIP_MT7603E_MT7612E=y
 # CONFIG_PACKAGE_wpa-supplicant is not set
 # CONFIG_WPA_WOLFSSL is not set
 # CONFIG_DRIVER_WEXT_SUPPORT is not set
-# CONFIG_DRIVER_11N_SUPPORT is not set
-# CONFIG_DRIVER_11AC_SUPPORT is not set
+CONFIG_DRIVER_11N_SUPPORT=y
+CONFIG_DRIVER_11AC_SUPPORT=y
 # CONFIG_DRIVER_11AX_SUPPORT is not set
 # CONFIG_WPA_ENABLE_WEP is not set
 # CONFIG_PACKAGE_wpa-supplicant-basic is not set
@@ -6828,7 +6831,7 @@ CONFIG_PACKAGE_libjson-script=y
 # CONFIG_PACKAGE_lscpu is not set
 # CONFIG_PACKAGE_lsof is not set
 # CONFIG_PACKAGE_lxc is not set
-# CONFIG_PACKAGE_maccalc is not set
+CONFIG_PACKAGE_maccalc=y
 # CONFIG_PACKAGE_macchanger is not set
 # CONFIG_PACKAGE_mandoc is not set
 # CONFIG_PACKAGE_mbedtls-util is not set
