--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -1,19 +1,8 @@
-#
-# Copyright (c) 2019-2021 P3TERX <https://p3terx.com>
-#
-# This is free software, licensed under the MIT License.
-# See /LICENSE for more information.
-#
-# https://github.com/P3TERX/Actions-OpenWrt
-# File: .github/workflows/update-checker.yml
-# Description: Source code update checker
-#
-
 name: Update Checker
 
 env:
-  REPO_URL: https://github.com/Lienol/openwrt
-  REPO_BRANCH: 21.02
+  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_BRANCH: 20200416
 
 on:
   workflow_dispatch:
